--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Listado de commit</h1>
     <p>Texto para el commit 1</p>
+    <p>Texto para el commit 2</p>
+    
     
 </body>
 </html>
