este es el commit para la rama feature

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>Texto para el commit 1</p>
     <p>Texto para el commit 2</p>
     <p>Texto para el commit 3</p>
+    <p>En esta linea existen los cambios que se han hecho en la rama feature</p>
     
 </body>
 </html>
