--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>Texto para el commit 1</p>
     <p>Texto para el commit 2</p>
     <p>Texto para el commit 3</p>
+    <p>ESTA LÍNEA ES DIFERENTE EN MAIN PARA CREAR CONFLICTO</p>
     
 </body>
 </html>
