Commit sin conflicto para hacer merge

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <p>Texto para el commit 1</p>
     <p>Texto para el commit 2</p>
     <p>Texto para el commit 3</p>
-    <p>En esta linea existen los cambios que se han hecho en la rama feature</p>
+
+    <p>ESTA LÍNEA ES DIFERENTE EN MAIN PARA CREAR CONFLICTO</p>7
+    <p>En esta línea se ha hecho un cambio en la rama feature pero no habra conflicto alguno</p>
+
     
 </body>
 </html>
